--- a/tip/tip.html
+++ b/tip/tip.html
@@ -1,18 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-    <div style="width:80%;margin:200px auto">
-   <div style="overflow:hidden;width:100%;height:400px" >
-       <div></div>
-       </div> 
+    <div class="box">
+        <div class="content">
+            <div class="row" id='row0'>
+                <div class="cell" id='0-0'></div>
+                <div class="cell" id='0-1'></div>
+                <div class="cell" id='0-2'></div>
+                <div class="cell" id='0-3'></div>
+                <div class="cell" id='0-4'></div>
+            </div>
+            <div class="row" id='row1'>
+                <div class="cell" id='1-0'></div>
+                <div class="cell" id='1-1'></div>
+                <div class="cell" id='1-2'></div>
+                <div class="cell" id='1-3'></div>
+                <div class="cell" id='1-4'></div>
+            </div>
+            <div class="row" id='row2'>
+                <div class="cell" id='2-0'></div>
+                <div class="cell" id='2-1'></div>
+                <div class="cell" id='2-2'></div>
+                <div class="cell" id='2-3'></div>
+                <div class="cell" id='2-4'></div>
+            </div>
+            <div class="row" id='row3'>
+                <div class="cell" id='3-0'></div>
+                <div class="cell" id='3-1'></div>
+                <div class="cell" id='3-2'></div>
+                <div class="cell" id='3-3'></div>
+                <div class="cell" id='3-4'></div>
+                
+            </div>
+            <div class="row" id='row4'>
+                <div class="cell" id='4-0'></div>
+                <div class="cell" id='4-1'></div>
+                <div class="cell" id='4-2'></div>
+                <div class="cell" id='4-3'></div>
+                <div class="cell" id='4-4'></div>
+            </div>
+        </div>
     </div>
 </body>
-    <script src="jquery-1.10.1.min.js"></script>
-    <script src="tip.js"></script>
+<script src="jquery-1.10.1.min.js"></script>
+<script src="tip.js"></script>
+
 </html>
