--- a/tip/tip.html
+++ b/tip/tip.html
@@ -6,46 +6,341 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="tip.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
     <div class="box">
         <div class="content">
             <div class="row" id='row0'>
-                <div class="cell" id='0-0'></div>
-                <div class="cell" id='0-1'></div>
-                <div class="cell" id='0-2'></div>
-                <div class="cell" id='0-3'></div>
-                <div class="cell" id='0-4'></div>
+                <div class="cell" id='0-0'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                </div>
+                <div class="cell" id='0-1'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                </div>
+                <div class="cell" id='0-2'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                </div>
+                <div class="cell" id='0-3'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                </div>
+                <div class="cell" id='0-4'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                </div>
             </div>
             <div class="row" id='row1'>
-                <div class="cell" id='1-0'></div>
-                <div class="cell" id='1-1'></div>
-                <div class="cell" id='1-2'></div>
-                <div class="cell" id='1-3'></div>
-                <div class="cell" id='1-4'></div>
+                <div class="cell" id='1-0'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='1-1'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='1-2'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='1-3'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='1-4'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
             </div>
             <div class="row" id='row2'>
-                <div class="cell" id='2-0'></div>
-                <div class="cell" id='2-1'></div>
-                <div class="cell" id='2-2'></div>
-                <div class="cell" id='2-3'></div>
-                <div class="cell" id='2-4'></div>
+                <div class="cell" id='2-0'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='2-1'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='2-2'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='2-3'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='2-4'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
             </div>
             <div class="row" id='row3'>
-                <div class="cell" id='3-0'></div>
-                <div class="cell" id='3-1'></div>
-                <div class="cell" id='3-2'></div>
-                <div class="cell" id='3-3'></div>
-                <div class="cell" id='3-4'></div>
-                
+                <div class="cell" id='3-0'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='3-1'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='3-2'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                </div>
+                <div class="cell" id='3-3'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='3-4'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+
             </div>
             <div class="row" id='row4'>
-                <div class="cell" id='4-0'></div>
-                <div class="cell" id='4-1'></div>
-                <div class="cell" id='4-2'></div>
-                <div class="cell" id='4-3'></div>
-                <div class="cell" id='4-4'></div>
+                <div class="cell" id='4-0'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='4-1'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='4-2'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='4-3'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
+                <div class="cell" id='4-4'>
+                    <div class='card'>
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+                    <div class="card">
+                        <span class="table">
+                            <span class="table-cell"></span>
+                        </span>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
